[gd_scene load_steps=35 format=2]

[ext_resource path="res://Creatures/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/platformer/01-King Human/Jump (78x58).png" type="Texture" id=2]
[ext_resource path="res://Assets/platformer/01-King Human/Run (78x58).png" type="Texture" id=3]
[ext_resource path="res://Assets/platformer/01-King Human/Idle (78x58).png" type="Texture" id=4]
[ext_resource path="res://Assets/platformer/01-King Human/Attack (78x58).png" type="Texture" id=5]
[ext_resource path="res://Creatures/HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 78, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 156, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 234, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 312, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 390, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 468, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 546, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 624, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 702, 0, 78, 58 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 780, 0, 78, 58 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Run",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=25]
radius = 6.27362
height = 11.3698

[sub_resource type="CircleShape2D" id=26]
radius = 6.33817

[sub_resource type="Animation" id=27]
resource_name = "Attack_Left"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.38358, 5.61266 ), Vector2( -13.3253, -2.20688 ), Vector2( -21.3816, -12.9473 ), Vector2( -18.2125, -18.1896 ), Vector2( -13.058, -28.0518 ), Vector2( -5.38358, -34.2487 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9.96533, 9.96533 ), Vector2( 32.0723, -1.77543 ), Vector2( 34.4778, -12.5998 ), Vector2( 34.4396, -23.4815 ), Vector2( 28.4451, -30.6978 ), Vector2( 30.9269, -28.7506 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 24
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.23437, -13.9691 )
frames = SubResource( 24 )
animation = "Idle"
flip_h = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.343636, -12.2562 )
shape = SubResource( 25 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -7.54182
margin_top = -32.5644
margin_right = 24.4582
margin_bottom = -28.5644

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="Attack"]
position = Vector2( -13.3253, -2.20688 )
shape = SubResource( 26 )
disabled = true

[node name="AttackAnimator" type="AnimationPlayer" parent="Attack"]
anims/Attack_Left = SubResource( 27 )
anims/Attack_Right = SubResource( 28 )
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
